--- a/second-lesson-pokemon/public/index.html
+++ b/second-lesson-pokemon/public/index.html
@@ -9,6 +9,7 @@
       content="Web site created using create-react-app"
     />
     <title>React App</title>
+    <base href="%PUBLIC_URL%/">
 
     <!-- Start Single Page Apps for GitHub Pages -->
     <script type="text/javascript">
