--- a/second-lesson-pokemon/public/index.html
+++ b/second-lesson-pokemon/public/index.html
@@ -8,7 +8,8 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>React App</title>
+    <link rel="icon" type="image/x-icon" href="./img/poke_icon.png">
+    <title>Poke App</title>
     <base href="/2.2024-Sem-Oris/">
 
     <!-- Start Single Page Apps for GitHub Pages -->
