--- a/second-lesson-pokemon/public/index.html
+++ b/second-lesson-pokemon/public/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="icon" type="image/x-icon" href="./img/poke_icon.png">
+    <link rel="icon" type="image/x-icon" href="/2.2024-Sem-Oris/img/poke_icon.png">
     <title>Poke App</title>
     <base href="/2.2024-Sem-Oris/">
 
